kubernetes/overlays/prod/backend-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  template:
    spec:
      serviceAccountName: backend
      containers:
        - name: backend
